# Fibsonisheaf

./: .gitignore  CMakeLists.txt  README.md  binet.c  builtin_gmp.c  fastdbl.c  fastdbl_v2.c  gmp.c  iterative.c  iterative_v2.c  main.c  matmul.c  matrix_v1.c  matrix_v2.c  naive.c  test.h
plotting/: anim.py  createjson.py  legend.json  plotting.py  speed.md
